add HOC and router example

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-router-flux": "^4.0.5",
     "react-navigation": "^2.8.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
