add splash screen example and add launcher icon

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.1",
+    "l": "^0.6.0",
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-router-flux": "^4.0.6",
+    "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^2.18.2",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
