--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,7 +137,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-splash-screen')
+
     compile fileTree(dir: "libs", include: ["*.jar"])
+
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
