--- a/package.json
+++ b/package.json
@@ -7,23 +7,24 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.1",
-    "l": "^0.6.0",
-    "prop-types": "^15.6.2",
-    "react": "16.4.1",
-    "react-native": "0.56.0",
+    "@react-native-community/cli-platform-android": "^3.0.3",
+    "@react-native-community/cli-platform-ios": "^3.0.0",
+    "lodash": "latest",
+    "prop-types": "^15.7.2",
+    "query-string": "latest",
+    "react": "16.9.0",
+    "react-native": "0.61.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-splash-screen": "^3.2.0",
-    "react-navigation": "^2.18.2",
-    "react-redux": "^5.1.1",
-    "redux": "^4.0.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-jest": "23.4.0",
+    "babel-jest": "24.9.0",
     "babel-preset-react-native": "^5",
-    "jest": "23.4.1",
-    "react-test-renderer": "16.4.1"
+    "jest": "24.9.0",
+    "react-test-renderer": "16.12.0"
   },
   "jest": {
     "preset": "react-native"
